added different workarounds

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "wrangler": "^2.0.5"
-  }
+  },
+  "main": "index.js",
+  "version": "1.0.0",
+  "description": "An Custom URL Shortener build on Cloud Flare Worker Platform",
+  "scripts": {
+    "test": "npm ci"
+  },
+  "author": "Dhruvacube <dhruvashaw@gmail.com>",
+  "license": "GNU General Public License v3.0"
 }
